--- a/style.css
+++ b/style.css
@@ -135,4 +135,34 @@ input{
 .country{
     margin-left: 10px;
 }
+@media only screen and (max-width:450px)
+{
+    .input{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 300px;
+        border: 1px solid grey;
+        border-radius: 10px;
+        align-items: center;
+    }
+    input{
+        width: 200px;
+        height: 40px;   
+        border:none;
+     }
 
+     .middle-portion{
+       width: 350px;
+       display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 10px;
+        justify-content:center;
+        height: 100px;
+    }
+    .middle-link{
+        text-align: center;
+     
+    }
+}
